--- a/.github/workflows/basic-workflow.yml
+++ b/.github/workflows/basic-workflow.yml
@@ -1,17 +1,23 @@
 name: Continuous integration example
 
 on: 
-  pull_request:
+  workflow_dispatch:
 
 jobs:
 
   test:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix: 
+        os: [macos-latest,windows-latest,ubuntu-latest]
+        java: ['11','17','21']
+    name: Java ${{matrix.java}} sample
     steps:
       - uses: actions/checkout@v4
-      - name: Set up JDK 21
+      - name: Set up JDK ${{matrix.java}}
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '21'
+          java-version: ${{matrix.java}}
       - run: mvn test
