--- a/.github/workflows/basic-workflow.yml
+++ b/.github/workflows/basic-workflow.yml
@@ -5,18 +5,17 @@ on:
 
 jobs:
   build:
+  test:
     runs-on: ${{ matrix.os }}
     strategy:
-        fail-fast: false
-        matrix:
-           os: [ macos-latest, windows-latest, ubuntu-latest ]
-           java: [ '11', '17', '21']
+          fail-fast: false
+          matrix:
+            os: [ macos-latest, windows-latest, ubuntu-latest ]
+            java: [ '11', '17', '21']
     name: Java ${{ matrix.java }} sample
-  test:
-    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Set up JDK 21
+      - name: Set up JDK ${{ matrix.java }}
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
