--- a/.github/workflows/basic-workflow.yml
+++ b/.github/workflows/basic-workflow.yml
@@ -19,6 +19,6 @@ jobs:
       - name: Set up JDK ${{ matrix.java }}
         uses: actions/setup-java@v4
         with:
-          distribution: 'adpot'
+          distribution: 'adopt'
           java-version: ${{ matrix.java }}
       - run: mvn test
